add some extension methods.

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ Test/obj/Debug/netcoreapp2.2/Test.csproj.FileListAbsolute.txt
 Test/obj/Debug/netcoreapp2.2/Test.csprojAssemblyReference.cache
 Test/obj/Debug/netcoreapp2.2/Test.dll
 Test/obj/Debug/netcoreapp2.2/Test.pdb
+/.vs/CompetitionPrograming2/v16/TestStore/0
