--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ Test/obj/Debug/netcoreapp2.2/Test.csprojAssemblyReference.cache
 Test/obj/Debug/netcoreapp2.2/Test.dll
 Test/obj/Debug/netcoreapp2.2/Test.pdb
 /.vs/CompetitionPrograming2/v16/TestStore/0
+/Test/obj
+/CompetitionPrograming2
+/.vs/CompetitionPrograming2/DesignTimeBuild
