.net core 3.1対応してみた

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ Test/obj/Debug/netcoreapp2.2/Test.pdb
 /Test/obj
 /CompetitionPrograming2
 /.vs/CompetitionPrograming2/DesignTimeBuild
+/Test/bin/Debug/netcoreapp3.1
